# CorsikaIO

./: .gitmodules  CMakeLists.txt  compile_flags.txt
include/: CorsikaReader.h  FileReader.h  GzipDecompressor.h  LocalFileRead.h  XRootDFileReader.h  ZstdDecompressor.h
src/: CorsikaReader.cpp  GzipDecompressor.cpp  ZstdDecompressor.cpp
test/: CMakeLists.txt  test_decompress.cpp  test_gz_zstd.txt  test_gz_zstd.txt.zst
